--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Modern Business - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
@@ -34,83 +33,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
-            </div>
+            
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="/game">Game</a>
                     </li>
-                    <li>
-                        <a href="services.html">Services</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown active">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="blog-home-1.html">Blog Home 1</a>
-                            </li>
-                            <li>
-                                <a href="blog-home-2.html">Blog Home 2</a>
-                            </li>
-                            <li class="active">
-                                <a href="blog-post.html">Blog Post</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                </ul>    
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -123,15 +53,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Blog Post
-                    <small>by <a href="#">Start Bootstrap</a>
-                    </small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Blog Post</li>
-                </ol>
+                <h1 class="page-header"><a href="https://monkeymart.online/">Monkey Mart</a></h1>
             </div>
         </div>
         <!-- /.row -->
@@ -142,28 +64,30 @@
             <!-- Blog Post Content Column -->
             <div class="col-lg-8">
 
-                <!-- Blog Post -->
-
-                <hr>
-
-                <!-- Date/Time -->
-                <p><i class="fa fa-clock-o"></i> Posted on August 24, 2013 at 9:00 PM</p>
-
-                <hr>
-
                 <!-- Preview Image -->
                 <img class="img-responsive" src="http://placehold.it/900x300" alt="">
 
                 <hr>
 
-                <!-- Post Content -->
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+                <p>Monkey Mart is an exciting online game where players step into the furry shoes of a mischievous monkey tasked with running a bustling mart in the heart of the jungle. With its vibrant graphics, addictive gameplay, and charming characters, Monkey Mart offers hours of entertainment for gamers of all ages.</p>
 
-                <hr>
+<h2>How to Play Monkey Mart</h2>
+
+<p>In <a href="https://monkeymart.online/">monkey mart</a>, players take on the role of a cheerful monkey entrepreneur who must manage various aspects of a bustling mart. The goal is to satisfy the diverse needs of jungle animals who visit the mart to fulfill their shopping desires. From fresh fruits to colorful trinkets, players must ensure that their mart is well-stocked and efficiently managed to keep the customers happy.</p>
+
+<p>Upon entering the game, players are greeted with a colorful jungle setting, complete with towering trees and chirping birds. The mart itself is a lively hub of activity, with different stalls offering a wide array of goods. As the monkey proprietor, players must navigate through different tasks, including restocking shelves, assisting customers, and managing finances.</p>
+
+<p>The gameplay of Monkey Mart is intuitive yet challenging, offering a perfect balance for both casual and seasoned gamers. Players use simple controls to move their monkey avatar around the mart, interacting with items and characters by clicking or tapping on them. Each level presents new challenges and objectives, keeping players engaged and entertained throughout their jungle shopping spree.</p>
+
+<h2>Monkey Mart unblocked</h2>
+
+<p>Monkey Mart unblocked is a version of the game that allows players to enjoy the full experience without any restrictions. Whether you're playing on a school computer or at home, Monkey Mart unblocked ensures that you can dive into the jungle adventure anytime, anywhere.</p>
+
+<p>One of the highlights of Monkey Mart unblocked is its accessibility. Unlike some online games that may be restricted by firewalls or filters, Monkey Mart unblocked can be played seamlessly on any device with an internet connection. This means that players can enjoy the game on their desktop, laptop, tablet, or smartphone without encountering any barriers.</p>
+
+<p>Moreover, Monkey Mart unblocked retains all the features and functionalities of the original game, ensuring that players can immerse themselves in the colorful world of jungle commerce without missing out on anything. Whether you're a fan of strategic management games or simply enjoy adorable animal characters, Monkey Mart unblocked offers endless fun for everyone.</p>
+
+<p>In conclusion, Monkey Mart is a delightful online game that combines strategic gameplay with charming visuals to create an immersive jungle adventure. With its intuitive controls, diverse challenges, and endless replay value, Monkey Mart is sure to captivate players of all ages. So, gather your bananas and get ready to swing into action in this wild retail extravaganza!</p>
 
             </div>
 
@@ -172,7 +96,7 @@
 
                 <!-- Blog Search Well -->
                 <div class="well">
-                    <h4>Blog Search</h4>
+                    <h4>Search</h4>
                     <div class="input-group">
                         <input type="text" class="form-control">
                         <span class="input-group-btn">
@@ -184,40 +108,16 @@
 
                 <!-- Blog Categories Well -->
                 <div class="well">
-                    <h4>Blog Categories</h4>
+                    <h4>Categories</h4>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
+                                <li><a href="/game">Game</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <!-- /.row -->
-                </div>
-
-                <!-- Side Widget Well -->
-                <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
                 </div>
 
             </div>
@@ -231,7 +131,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Your Website 2024</p>
                 </div>
             </div>
         </footer>
